--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.3",
     "svelte": "^3.57.0",
-    "vite": "^4.3.2"
+    "vite": "^4.3.2",
+    "openai": "^3.2.1"
   }
 }
